# SchoolRing

./: .gitignore  README.md  [my_ui_in_puton].py  active_schedule.py  add_template_frame.py  admittance.ui  authorization.py  authorization.ui  base_of_data.py  bd_work.py  choose_defoult_templateui.py  create_schedule.py  datacheking.py  delete_schedul_on_day.py  error.py  frame_for_home.py  get_name_templ.py  lock.py  logining.py  logining.ui  main.py  main.ui  mu_ui_sest_dialog_login.ui  mu_ui_test.ui  myui_in_py.py  one_template.py  pyproject.toml  registr.ui  registration.py  registration.ui  requirements.txt  schedule_data_sample  schoolring.sqlite  schoolring.ui  schoolring2.0.ui  services.py  set_schedul_on_day.py  sucsesfully.py  technical specification.md  technical_specification.md  (+6 more)
code/: datacheking.py  views.py
data_base/: schoolring.sqlite
db/: schoolring.sqlite
docs/: README.md  technical_specification.md
presentation/: SchoolRing_presentation_draft.pptx
ui/: active_schedule.ui  add_template_frame.ui  addshedule.ui  authorization.ui  choose_defoult_templateui.ui  create_schedule.ui  delete_schedul_on_day.ui  edit_schedul_on_day.ui  edit_schedule.ui  error.ui  frame_for_home.ui  frame_home.py  get_name_templ.ui  lock.ui  logining.ui  main.ui  one_template.ui  registration.ui  set_schedul_on_day.ui  sucsesfully.ui
